--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
     "@types/react-dom": "^18.3.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "overrides": {
+      "devalue": ">=5.3.2"
+    }
   }
 }
