--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^22",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "esbuild": ">=0.25.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   },
