--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@
 # dependencies
 /node_modules
 
-# next.js
-/.next/
-/out/
+# Astro
+/.astro/
+/dist/
 
 # production
 /build
@@ -24,4 +24,3 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
